apps/metrics/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: metrics
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.trivernis.dev`) || Host(`grafana.trivernis.net`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: prometheus-stack-grafana
      port: http-web
